--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -32,9 +32,9 @@
           <td><%= item.genre.name %></td>
           <td>
             <% if item.is_active==true %>
-            販売中
+            <p class="text-success">販売中</p>
             <% else %>
-            販売停止中
+            <P class="text-danger">販売停止中</p>
             <% end %>
           </td>
         </tr>
