--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -15,7 +15,10 @@
   <% sum=0 %>
   <% @cart_items.each do |cart_item| %>
   <tr>
-    <td><%= cart_item.item.name %></td>
+    <td>
+      <%= cart_item.item.name %>
+      <%= attachment_image_tag cart_item.item, :image, :fill, 100, 100, fallback: "no_image.jpg" %>
+    </td>
     <td><%= cart_item.item.tax_price %></td>
     <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local: true do |f| %>
     <td>
