--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -2,7 +2,7 @@
 <table>
   <tr>
     <th>登録情報</th>
-    <th><%= link_to "編集する", edit_customers_path, class: "btn btn-outline-secondary btn-block btn-secondary" %></th>
+    <th><%= link_to "編集する", edit_customers_path, class: "btn btn-outline-secondary btn-block btn-secondary size" %></th>
   </tr>
 </table>
 <table>
@@ -34,12 +34,12 @@
 <table>
   <tr>
     <th>配送先</th>
-    <th><%= link_to "一覧を見る", addresses_path, class: "btn btn-outline-secondary btn-block btn-secondary" %></th>
+    <th><%= link_to "一覧を見る", addresses_path, class: "btn btn-outline-secondary btn-block btn-secondary size" %></th>
   </tr>
 </table>
 <table>
   <tr>
     <th>注文履歴</th>
-    <th><%= link_to "一覧を見る", orders_path, class: "btn btn-outline-secondary btn-block btn-secondary" %></th>
+    <th><%= link_to "一覧を見る", orders_path, class: "btn btn-outline-secondary btn-block btn-secondary size" %></th>
   </tr>
 </table>
