--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -27,9 +27,9 @@
           <th>販売ステータス</th>
           <td>
             <% if @item.is_active == true %>
-              販売中
+              <p class="text-success">販売中</p>
             <% else %>
-              販売停止中
+              <p class="text-danger">販売停止中</p>
             <% end %>
           </td>
         </tr>
