--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,6 +66,24 @@
           </div>
         </div>
       </nav>
+      <div class="search-form">
+        <% if customer_signed_in? %>
+          <%= form_with model: @item, url: search_items_path, method: :get, local: true do |f| %>
+            <%= f.text_field :keyword, value: @keyword %>
+            <%= f.submit "検索" %>
+          <% end %>
+        <% elsif admin_signed_in? %>
+          <%= form_with model: @item, url: search_admin_items_path, method: :get, local: true do |f| %>
+            <%= f.text_field :keyword, value: @keyword %>
+            <%= f.submit "検索" %>
+          <% end %>
+        <% else %>
+          <%= form_with model: @item, url: search_items_path, method: :get, local: true do |f| %>
+            <%= f.text_field :keyword, value: @keyword %>
+            <%= f.submit "検索" %>
+          <% end %>
+        <% end %>
+      </div>
     </header>
     <%= yield %>
   </body>
