--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -18,7 +18,7 @@
     <li>
       <%= f.radio_button :address_option, 1 %>
       <%= f.label :address_option, "登録済み住所から選択", value: 1 %>
-      <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :full_address) %>
+      <%= f.select :address_id, options_from_collection_for_select(@addresses, :id, :full_address) %>
     </li>
     <li>
       <%= f.radio_button :address_option, 2 %>
