--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,45 +1,57 @@
-<table>
-  <tr>
-    <th>ショッピングカート</th>
-    <th><%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete, class: "btn btn-outline-secondary btn-block btn-secondary size", data: { confirm: "Are you certain you want to delete this?" } %></th>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th>商品名</th>
-    <th>単価（税込）</th>
-    <th>数量</th>
-    <th>小計</th>
-    <th></th>
-  </tr>
-  <% sum=0 %>
-  <% @cart_items.each do |cart_item| %>
-  <tr>
-    <td>
-      <%= cart_item.item.name %>
-      <%= attachment_image_tag cart_item.item, :image, :fill, 100, 100, fallback: "no_image.jpg" %>
-    </td>
-    <td><%= cart_item.item.tax_price %></td>
-    <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local: true do |f| %>
-    <td>
-      <%= f.select :amount, *[1..10], {prompt: "cart_item.amount"} %>
-      <%= f.submit "変更", class: "btn btn-outline-secondary btn-block btn-secondary size"%>
-    </td>
-    <% end %>
-    <% subtotal=(cart_item.item.tax_price)*cart_item.amount %>
-    <td><%= subtotal %></td>
-    <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, class: "btn btn-outline-secondary btn-block btn-secondary size", data: { confirm: "Are you certain you want to delete this?" } %></td>
-    <% sum+=subtotal %>
-  </tr>
-  <% end %>
-</table>
-<table>
-  <tr>
-    <th><%= link_to "買い物を続ける", root_path, class: "btn btn-outline-secondary btn-block btn-secondary size" %></th>
-    <th>合計金額</th>
-    <th><%= sum %><th>
-  </tr>
-</table>
-<h2>
-  <%= link_to "情報入力に進む", new_order_path, class: "btn btn-outline-secondary btn-block btn-secondary size" %>
-</h2>
+<div class="container">
+  <div class="row cart-row">
+    <div class="col-md-4 cart">ショッピングカート</div>
+    <div class="col-md-3 offset-md-5">
+      <%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete, class: "btn btn-outline-danger btn-block btn-danger size", data: { confirm: "Are you certain you want to delete this?" } %>
+    </div>
+    <div class="col-md-12 cart-item-table">
+      <table class="table table-bordered cart-table">
+        <tr>
+          <th>商品名</th>
+          <th>単価（税込）</th>
+          <th>数量</th>
+          <th></th>
+          <th>小計</th>
+          <th></th>
+        </tr>
+        <% sum=0 %>
+        <% @cart_items.each do |cart_item| %>
+        <tr>
+          <td>
+            <%= attachment_image_tag cart_item.item, :image, :fill, 100, 60, fallback: "no_image.jpg" %>
+            <%= cart_item.item.name %>
+          </td>
+          <td><%= cart_item.item.tax_price %></td>
+          <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local: true do |f| %>
+            <td>
+              <%= f.select :amount, *[1..10], {prompt: "cart_item.amount"} %>
+            </td>
+            <td>
+              <%= f.submit "変更", class: "btn btn-outline-success btn-block btn-success size" %>
+            </td>
+          <% end %>
+          <% subtotal=(cart_item.item.tax_price)*cart_item.amount %>
+          <td><%= subtotal %></td>
+          <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, class: "btn btn-outline-danger btn-block btn-danger size", data: { confirm: "Are you certain you want to delete this?" } %></td>
+          <% sum+=subtotal %>
+        </tr>
+        <% end %>
+      </table>
+    </div>
+    <div class="col-md-3"><%= link_to "買い物を続ける", root_path, class: "btn btn-outline-primary btn-block btn-primary size" %></div>
+      <div class="col-md-3 offset-md-6">
+        <table class="table table-bordered">
+          <tr>
+            <th>合計金額</th>
+            <td><%= sum %></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+    <div class="row justify-content-center">
+      <div class="col-md-2 align-self-center">
+        <%= link_to "情報入力に進む", new_order_path, class: "btn btn-outline-success btn-block btn-success size" %>
+      </div>
+    </div>
+</div>
