--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,37 +1,26 @@
-<table>
-  <thead>
-    <tr>
-      <th>ジャンル検索</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @genres.each do |genre| %>
-    <tr>
-      <td><%# link_to genre.name, %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-<%= attachment_image_tag @item, :image, :fill, 100, 100, fallback: "no_image.jpg" %>
-<table>
-  <tr>
-    <th><%= @item.name %></th>
-  </tr>
-  <tr>
-    <th><%= @item.introduction %></th>
-  </tr>
-  <tr>
-    <th>￥<%= @item.tax_price %>（税込）</th>
-  </tr>
-  <tr>
-  </tr>
-</table>
- <%= form_with model: @cart_item, url: cart_items_path, method: :post, local: true do |f| %>
-   <table>
-     <tr>
-      <%= f.hidden_field :item_id, value: @item.id  %>
-      <th><%= f.select :amount, *[1..10], {prompt: "--個数を選択--"} %></th>
-      <th><%= f.submit "カートに入れる", class: "btn btn-outline-secondary btn-block btn-secondary size" %></th>
-    </tr>
-  </table>
- <% end %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="text-left">
+      <%= render "public/bar/sidebar", genres: @genres %><br>
+    </div>
+    <div class="col-md-4">
+      <%= attachment_image_tag @item, :image, :fill, 400, 300, fallback: "no_image.jpg" %>
+    </div>
+    <div class="col-md-5 items-show">
+      <h3><%= @item.name %></h3>
+      <p><%= @item.introduction %></p>
+      <h4>￥<%= @item.tax_price %>（税込）</h4>
+      <%= form_with model: @cart_item, url: cart_items_path, method: :post, local: true do |f| %>
+      <div class="add-to-cart">
+        <%= f.hidden_field :item_id, value: @item.id  %>
+        <div class="input-group">
+          <p><%= f.select :amount, *[1..10], {prompt: "--個数を選択--"}, class: "custom-select select-box" %></p>
+          <div class="input-group-append">
+          <p><%= f.submit "カートに入れる", class: "btn btn-outline-success btn-block btn-success size" %></p>
+          </div>
+        </div>
+      </div>
+     <% end %>
+    </div>
+    </div>
+  </div>
