--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,45 +1,45 @@
-<h1>マイページ</h1>
-<table>
-  <tr>
-    <th>登録情報</th>
-    <th><%= link_to "編集する", edit_customers_path, class: "btn btn-outline-secondary btn-block btn-secondary size" %></th>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th>氏名</th>
-    <th><%= @customer.last_name %><%= @customer.first_name %></th>
-  </tr>
-  <tr>
-    <th>カナ</th>
-    <th><%= @customer.last_name_kana %><%= @customer.first_name_kana %></th>
-  </tr>
-  <tr>
-    <th>郵便番号</th>
-    <th><%= @customer.postal_code %></th>
-  </tr>
-  <tr>
-    <th>住所</th>
-    <th><%= @customer.address %></th>
-  </tr>
-  <tr>
-    <th>電話番号</th>
-    <th><%= @customer.telephone_number %></th>
-  </tr>
-  <tr>
-    <th>メールアドレス</th>
-    <th><%= @customer.email %></th>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th>配送先</th>
-    <th><%= link_to "一覧を見る", addresses_path, class: "btn btn-outline-secondary btn-block btn-secondary size" %></th>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th>注文履歴</th>
-    <th><%= link_to "一覧を見る", orders_path, class: "btn btn-outline-secondary btn-block btn-secondary size" %></th>
-  </tr>
-</table>
+<div class="container-fulid">
+  <div class="row justify-content-start position">
+    <div class="col-md-6 my-page">
+      <p class="about-me">マイページ</p>
+      <div class="registrations">
+        <p class="order">登録情報</p>
+        <p class="info-edit"><%= link_to "編集する", edit_customers_path, class: "btn btn-outline-success btn-block btn-success size" %></p>
+      </div>
+      <table class="table table-bordered">
+        <tr>
+          <th class="thead">氏名</th>
+          <th><%= @customer.last_name %><%= @customer.first_name %></th>
+        </tr>
+        <tr>
+          <th class="thead">カナ</th>
+          <th><%= @customer.last_name_kana %><%= @customer.first_name_kana %></th>
+        </tr>
+        <tr>
+          <th class="thead">郵便番号</th>
+          <th><%= @customer.postal_code %></th>
+        </tr>
+        <tr>
+          <th class="thead">住所</th>
+          <th><%= @customer.address %></th>
+        </tr>
+        <tr>
+          <th class="thead">電話番号</th>
+          <th><%= @customer.telephone_number %></th>
+        </tr>
+        <tr>
+          <th class="thead">メールアドレス</th>
+          <th><%= @customer.email %></th>
+        </tr>
+      </table>
+      <div class="my-edit">
+        <p class="order">配送先</p>
+        <p class="delivery-index"><%= link_to "一覧を見る", addresses_path, class: "btn btn-outline-primary btn-block btn-primary size" %></p>
+      </div>
+      <div class="order-history">
+        <p class="order">注文履歴</p>
+        <p class="history-index"><%= link_to "一覧を見る", orders_path, class: "btn btn-outline-primary btn-block btn-primary size" %></p>
+      </div>
+    </div>
+  </div>
+</div>
