--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -48,7 +48,7 @@
       </table>
       <div class="row justify-content-center">
         <div class="col-md-3">
-          <button type="submit" class="btn btn-primary">変更を保存</button>
+          <button type="submit" class="btn btn-outline-success btn-block btn-success size">変更を保存</button>
         </div>
       </div>
     </div>
