--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,43 +1,45 @@
-<h1>会員情報編集</h1>
-<%= form_with model: @customer, url: customers_path, local:true do |f| %>
-<table>
-  <tr>
-    <th>氏名</th>
-    <th><%= f.text_field :last_name %></th>
-    <th><%= f.text_field :first_name %></th>
-  </tr>
-  <tr>
-    <th>カナ</th>
-    <th><%= f.text_field :last_name_kana %></th>
-    <th><%= f.text_field :first_name_kana %></th>
-  </tr>
-  <tr>
-    <th>郵便番号</th>
-    <th><%= f.text_field :postal_code %></th>
-  </tr>
-  <tr>
-    <th>住所</th>
-    <th><%= f.text_field :address %></th>
-  </tr>
-  <tr>
-    <th>電話番号</th>
-    <th><%= f.text_field :telephone_number %></th>
-  </tr>
-  <tr>
-    <th>メールアドレス</th>
-    <th><%= f.text_field :email %></th>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th></th>
-    <th>
-      <button type="submit" class="btn btn-primary">編集内容をを保存</button>
-    </th>
-    <th></th>
-    <th>
-      <%= link_to "退会する",unsubscribe_customers_path %>
-    </th>
-  </tr>
-</table>
-<% end %>
+<div class="container">
+  <h3 class="row justify-content-start position">会員情報編集</h3>
+  <%= form_with model: @customer, url: customers_path, local:true do |f| %>
+  <div class="row justify-content-start">
+    <div class="col-md-9">
+      <table class="table">
+        <tr>
+          <th>氏名</th>
+          <th><%= f.text_field :last_name, class: "rounded" %></th>
+          <th><%= f.text_field :first_name, class: "rounded" %></th>
+        </tr>
+        <tr>
+          <th>カナ</th>
+          <th><%= f.text_field :last_name_kana, class: "rounded" %></th>
+          <th><%= f.text_field :first_name_kana, class: "rounded" %></th>
+        </tr>
+        <tr>
+          <th>郵便番号</th>
+          <th><%= f.text_field :postal_code, class: "rounded" %></th>
+        </tr>
+        <tr>
+          <th>住所</th>
+          <th colspan="2"><%= f.text_field :address, class: "rounded", size: 80 %></th>
+        </tr>
+        <tr>
+          <th>電話番号</th>
+          <th><%= f.text_field :telephone_number, class: "rounded" %></th>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <th><%= f.text_field :email, class: "rounded" %></th>
+        </tr>
+      </table>
+      <div class="member-edit">
+        <p>
+          <button type="submit" class="btn btn-outline-success btn-block btn-success size">編集内容をを保存</button>
+        </p>
+        <p>
+          <%= link_to "退会する",unsubscribe_customers_path, class: "btn btn-outline-danger btn-block btn-danger size" %>
+        </p>
+      </div>
+    </div>
+  </div>
+  <% end %>
+</div>
