--- a/app/views/public/orders/check.html.erb
+++ b/app/views/public/orders/check.html.erb
@@ -1,61 +1,79 @@
-<h1>注文情報確認</h1>
-<table>
-  <thead>
-    <tr>
-      <th>商品名</th>
-      <th>単価（税込）</th>
-      <th>数量</th>
-      <th>小計</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% sum=0 %>
-    <% @cart_items.each do |cart_item| %>
-    <tr>
-      <% subtotal=(cart_item.item.tax_price)*cart_item.amount %>
-      <td>
-        <%= attachment_image_tag cart_item.item, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
-        <%= cart_item.item.name %>
-      </td>
-      <td><%= cart_item.item.tax_price %></td>
-      <td><%= cart_item.amount %></td>
-      <td><%= subtotal %></td>
-      <% sum+=subtotal %>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-<table>
-  <tr>
-    <th>送料</th>
-    <th><%= @sipping_fee %></th>
-  </tr>
-  <tr>
-    <th>商品合計</th>
-    <th><%= sum %></th>
-  </tr>
-  <tr>
-    <th>請求金額</th>
-    <th><%= sum+@sipping_fee %></th>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th>支払方法</th>
-    <th><%= @order.payment_method_i18n %> </th>
-  </tr>
-  <tr>
-    <th>お届け先</th>
-    <th><%# @order.delivery_full_address %> </th>
-  </tr>
-</table>
-<%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
-  <%= f.hidden_field :payment_method, value: @order.payment_method %>
-  <%= f.hidden_field :delivery_postal_code, value: @order.delivery_postal_code %>
-  <%= f.hidden_field :delivery_address, value: @order.delivery_address %>
-  <%= f.hidden_field :delivery_name, value: @order.delivery_name %>
-  <%= f.hidden_field :sipping_fee, value: @sipping_fee %>
-  <%= f.hidden_field :billing_amount, value: sum+@sipping_fee %>
-  <%= f.hidden_field :customer_id, value: @order.customer_id %>
-  <%= f.submit "注文を確定する", class: "btn btn-outline-secondary btn-block btn-secondary size" %>
-<% end %>
+<div class="container">
+  <div class="row check-row">
+    <div class="col-md-4 check">注文情報確認</div>
+  </div>
+  <div class="row justify-content-start">
+    <div class="col-md-8 check-col">
+      <table class="table table-bordered check-table">
+        <thead>
+          <tr>
+            <th class="thead">商品名</th>
+            <th class="thead">単価（税込）</th>
+            <th class="thead">数量</th>
+            <th class="thead">小計</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% sum=0 %>
+          <% @cart_items.each do |cart_item| %>
+          <tr>
+            <% subtotal=(cart_item.item.tax_price)*cart_item.amount %>
+            <td>
+              <%= attachment_image_tag cart_item.item, :image, :fill, 70, 40, fallback: "no_image.jpg" %>
+              <%= cart_item.item.name %>
+            </td>
+            <td><%= cart_item.item.tax_price %></td>
+            <td><%= cart_item.amount %></td>
+            <td><%= subtotal %></td>
+            <% sum+=subtotal %>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-3 offset-md-1">
+      <table class="table table-bordered check-sum">
+        <tr>
+          <th class="thead">送料</th>
+          <th><%= @sipping_fee %></th>
+        </tr>
+        <tr>
+          <th class="thead">商品合計</th>
+          <th><%= sum %></th>
+        </tr>
+        <tr>
+          <th class="thead">請求金額</th>
+          <th><%= sum+@sipping_fee %></th>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row justify-content-start">
+    <div class="col-md-10">
+      <div class="check-method">
+        <ul>
+          <li class="paypay">支払方法</li>
+          <li><%= @order.payment_method_i18n %> </li>
+        </ul>
+        <ul>
+          <li class="delivery-address">お届け先</li>
+          <li><%= @order.delivery_full_address %> </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-md-2">
+      <%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
+        <%= f.hidden_field :payment_method, value: @order.payment_method %>
+        <%= f.hidden_field :delivery_postal_code, value: @order.delivery_postal_code %>
+        <%= f.hidden_field :delivery_address, value: @order.delivery_address %>
+        <%= f.hidden_field :delivery_name, value: @order.delivery_name %>
+        <%= f.hidden_field :sipping_fee, value: @sipping_fee %>
+        <%= f.hidden_field :billing_amount, value: sum+@sipping_fee %>
+        <%= f.hidden_field :customer_id, value: @order.customer_id %>
+        <%= f.submit "注文を確定する", class: "btn btn-outline-success btn-block btn-success size" %>
+      <% end %>
+    </div>
+  </div>
+</div>
