--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,1 +1,7 @@
-<h1>ご注文ありがとうございました！</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 complete">
+      <h1>ご注文ありがとうございました！</h1>
+    </div>
+  </div>
+</div>
