--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4 class="row justify-content-start position">注文情報入力</h4>
+  <h4 class="row justify-content-start position"><span class="thead">注文情報入力</span></h4>
   <div class="row justify-content-start">
     <div class="col-md-5">
     <%= form_with model: @order, url: check_orders_path, local: true do |f| %>
