--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,7 +66,7 @@ table th, td{
   white-space: nowrap;
 }
 
-.admin-log-in{
+.log-in{
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
@@ -74,9 +74,13 @@ table th, td{
   margin: 0;
 }
 
-ul.admin-log-in>li{
+ul.log-in>li{
   margin: 5px;
   width: calc(50% - 10px);
+}
+
+.admin-li{
+  padding-left: 300px;
 }
 
 .form{
@@ -126,8 +130,12 @@ table.order-status th{
   border: 0px none;
 }
 
+table.genre-search{
+  border: 1px solid black;
+}
 table.genre-search th{
   white-space: nowrap;
+  border: 0px none;
 }
 
 .welcom>p{
@@ -267,10 +275,6 @@ li{
   padding-left: 170px;
 }
 
-.check-row{
-  margin-top: 50px;
-  margin-bottom: 0px;
-}
 
 .check-col{
   margin-bottom: 25px;
@@ -394,4 +398,101 @@ table.table.table-bordered.check-sum {
 
 .unsubscribe-button{
   margin-top: 50px;
+}
+
+.address-registrations>ul{
+  list-style-type: none;
+  display: flex;
+}
+
+.address-registrations-form{
+  padding-left: 10px;
+}
+
+.address-registrations-form-1{
+  padding-left: 170px;
+}
+
+.address-registrations-form-2{
+  padding-left: 170px;
+}
+
+.address-registrations-form-3{
+  padding-left: 345px;
+}
+
+.address-registrations-edit>ul{
+  list-style-type: none;
+  display: flex;
+}
+
+.address-registrations-edit-1{
+  padding-left: 10px;
+}
+
+.address-registrations-edit-2{
+  padding-left: 170px;
+}
+
+.address-registrations-edit-3{
+  padding-left: 170px;
+}
+
+.address-registrations-edit-4{
+  padding-left: 345px;
+}
+
+table.order-details-index th{
+  text-align: center;
+  vertical-align: middle;
+}
+
+table.order-content-table{
+  width: 900px;
+}
+
+.about-text{
+  text-align: center;
+  vertical-align: middle;
+  margin-top: 100px;
+}
+
+.about{
+  font-size: 150px;
+}
+
+.input{
+  margin-left: 17px;
+}
+
+.kana-button{
+  width: 190px;
+}
+.kana{
+  font-size: 20px;
+  text-indent: 1em;
+}
+
+.cus-log{
+  margin-left: 170px;
+}
+
+.log-text{
+  font-size: 15px;
+  background-color: #C0C0C0;
+}
+
+.kana-log{
+  font-size: 20px;
+  text-indent: 5em;
+}
+
+.not-log{
+  margin-top: 50px;
+}
+
+.search-form{
+  position: absolute;
+  right: 10px;
+  top: 80px;
 }
