--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h3 class="row justify-content-start position"><%= @customer.full_name %>さんの会員情報編集</h3>
+<h3 class="row justify-content-start position"><span class="thead"><%= @customer.full_name %>さんの会員情報編集</span></h3>
 <%= form_with model: @customer, url: admin_customer_path, local:true do |f| %>
   <div class="row justify-content-start">
     <div class="col-md-9">
