--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
-  <h3 class="row justify-content-start position">会員一覧</h3>
+  <h3 class="row justify-content-start position"><span class="thead">会員一覧</span></h3>
   <div class="row justify-content-center">
     <div class="col-md-8">
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th>会員ID</th>
-            <th>氏名</th>
-            <th>メールアドレス</th>
-            <th>ステータス</th>
-            <th colspan="3"></th>
+            <th class="thead">会員ID</th>
+            <th class="thead">氏名</th>
+            <th class="thead">メールアドレス</th>
+            <th class="thead">ステータス</th>
+            <th class="thead" colspan="3"></th>
           </tr>
         </thead>
         <tbody>
@@ -32,8 +32,8 @@
         </tr>
         <% end %>
         </tbody>
-        <%= paginate @customers %>
       </table>
+      <%= paginate @customers %>
     </div>
   </div>
 </div>
