--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-<h3 class="row justify-content-start position">ジャンル一覧・追加</h3>
+<h3 class="row justify-content-start position"><span class="thead">ジャンル一覧・追加</span></h3>
 <%= form_with model:@genre, url: admin_genres_path, local:true do |f| %>
 <div class="genre">
   <p>ジャンル名</p>
   <p><%= f.text_field :name %></p>
-  <p><%= f.submit "新規登録", class: 'btn btn-primary' %></p>
+  <p><%= f.submit "新規登録", class: 'btn btn-success' %></p>
 </div>
 <% end %>
 <div class="col-md-7">
@@ -19,7 +19,7 @@
       <% @genres.each do |genre| %>
         <tr>
           <td class="genre-name"><%= genre.name %></td>
-          <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: 'btn btn-primary' %></td>
+          <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: 'btn btn-success' %></td>
         </tr>
       <% end %>
     </tbody>
