--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
-  <h3 class="row justify-content-start position">注文履歴一覧</h3>
+  <h3 class="row justify-content-start position"><span class="thead">注文履歴一覧</span></h3>
   <div class="row justify-content-center">
     <div class="col-md-10">
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th>購入日時</th>
-            <th>購入者</th>
-            <th>注文個数</th>
-            <th>注文ステータス</th>
-            <th colspan="3"></th>
+            <th class="thead">購入日時</th>
+            <th class="thead">購入者</th>
+            <th class="thead">注文個数</th>
+            <th class="thead">注文ステータス</th>
+            <th class="thead" colspan="3"></th>
           </tr>
         </thead>
         <tbody>
