--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h3 class="row justify-content-start position">商品編集</h3>
+<h3 class="row justify-content-start position"><span class="thead">商品編集</span></h3>
 <%= form_with model: @item, url: admin_item_path, local:true do |f| %>
 <div class="row justify-content-center">
   <div class="col-md-7">
@@ -68,7 +68,7 @@
       </tbody>
     </table>
     <div class="row justify-content-center">
-      <button type="submit" class="btn btn-primary">変更を保存</button>
+      <button type="submit" class="btn btn-success">変更を保存</button>
     </div>
   </div>
 </div>
