--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center">
-    <h3 class="col-md-9 float-left">商品一覧</h3>
+    <h3 class="col-md-9 float-left"><span class="thead">商品一覧</span></h3>
     <div class="col_md_1 justify-content-end">
       <%= link_to new_admin_item_path, class: "btn btn-outline-secondary btn-block btn-secondary" do %>
       <i class="fas fa-plus size"></i>
@@ -11,12 +11,12 @@
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th>商品ID</th>
-            <th>商品名</th>
-            <th>税抜価格</th>
-            <th>ジャンル</th>
-            <th>ステータス</th>
-            <th colspan="3"></th>
+            <th class="thead">商品ID</th>
+            <th class="thead">商品名</th>
+            <th class="thead">税抜価格</th>
+            <th class="thead">ジャンル</th>
+            <th class="thead">ステータス</th>
+            <th class="thead" colspan="3"></th>
           </tr>
         </thead>
         <tbody>
@@ -28,7 +28,7 @@
               <%= item.name %>
             <% end %>
           </td>
-          <td><%= item.price %></td>
+          <td><%= item.price.to_s(:delimited) %></td>
           <td><%= item.genre.name %></td>
           <td>
             <% if item.is_active==true %>
