--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3 class="row justify-content-start position">商品新規登録</h3>
+  <h3 class="row justify-content-start position"><span class="thead">商品新規登録</span></h3>
   <%= form_with model: @item, url: admin_items_path, local:true do |f| %>
     <div class="row justify-content-center">
       <div class="col-md-7">
@@ -68,7 +68,7 @@
           </tbody>
         </table>
         <div class="row justify-content-center">
-          <button type="submit" class="btn btn-primary">新規登録</button>
+          <button type="submit" class="btn btn-success">新規登録</button>
         </div>
       </div>
     </div>
