--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <h3 class="row justify-content-start position">商品詳細</h3>
+  <h3 class="row justify-content-start position"><span class="thead">商品詳細</span></h3>
   <div class="row">
     <div class="col-md-3">
-      <%= attachment_image_tag @item, :image, :fill, 60, 60, fallback: "no_image.jpg" %>
+      <%= attachment_image_tag @item, :image, :fill, 300, 200, fallback: "no_image.jpg" %>
     </div>
     <div class="col-md-8">
       <table class="table table-hover table-inverse show">
@@ -21,7 +21,7 @@
           <th>税込価格</br>
           （税抜価格）
           </th>
-          <td><%= @item.tax_price %>(<%= @item.price %>)円</td>
+          <td><%= @item.tax_price.to_s(:delimited) %>(<%= @item.price.to_s(:delimited) %>)円</td>
         </tr>
         <tr>
           <th>販売ステータス</th>
@@ -36,7 +36,7 @@
       </table>
       <div class="row justify-content-center">
         <div class="col-md-3">
-          <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-outline-primary btn-block btn-primary size" %>
+          <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-outline-success btn-block btn-success size" %>
         </div>
       </div>
     </div>
