--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,53 +1,47 @@
-<h1>配送先登録/一覧</h1>
+<div class="container">
+  <h3 class="row justify-content-start position"><span class="thead">配送先登録/一覧</span></h3>
+  <div class="row justify-content-start">
+    <div class="col-md-12">
 <%= form_with model: @address, url: addresses_path, local: true do |f| %>
-<table>
-  <tr>
-    <th>郵便番号（ハイフンなし）</th>
-    <th>
-      <div class="field">
-        <%= f.label :postal_code %><br />
-        <%= f.text_field :postal_code, autofocus: true, placeholder:"0000000" %>
-      </div>
-    </th>
-  </tr>
-  <tr>
-    <th>住所</th>
-    <th>
-      <div class="field">
-        <%= f.label :address %><br />
-        <%= f.text_field :address, autofocus: true, placeholder:"東京都渋谷区代々木神園町0-0" %>
-      </div>
-    </th>
-  </tr>
-  <tr>
-    <th>宛名</th>
-    <th></th>
-    <th>
-      <div class="field">
-        <%= f.label :name %><br />
-        <%= f.text_field :name, autofocus: true, placeholder:"令和道子" %>
-      </div>
-    </th>
-    <th><button type="submit" class="btn btn-primary">新規登録</button></th>
-  </tr>
-</table>
+<div class="address-registrations">
+  <ul>
+    <li>郵便番号（ハイフンなし）</li>
+    <li class="address-registrations-form">
+      <%= f.text_field :postal_code, autofocus: true, placeholder:"0000000" %>
+    </li>
+  </ul>
+  <ul>
+    <li>住所</li>
+    <li class="address-registrations-form-1">
+      <%= f.text_field :address, autofocus: true, placeholder:"東京都渋谷区代々木神園町0-0", size:80 %>
+    </li>
+  </ul>
+  <ul>
+    <li>宛名</li>
+    <li class="address-registrations-form-2">
+      <%= f.text_field :name, autofocus: true, placeholder:"令和道子" %>
+    </li>
+    <li class="address-registrations-form-3"><button type="submit" class="btn btn-outline-success btn-block btn-success size">新規登録</button></li>
+  </ul>
+</div>
 <% end %>
-<table>
+<table class="table table-bordered">
   <% @addresses.each do |address| %>
   <tr>
-    <th>郵便番号</th>
-    <th>住所</th>
-    <th>宛名</th>
-    <th></th>
+    <th class="thead">郵便番号</th>
+    <th class="thead">住所</th>
+    <th class="thead">宛名</th>
+    <th class="thead"></th>
   </tr>
   <tr>
     <td><%= address.postal_code %></td>
     <td><%= address.address %></td>
     <td><%= address.name %></td>
-    <td>
-      <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-outline-secondary btn-block btn-secondary size" %>
-      <%= link_to "削除する", address_path(address.id), method: :delete, class: "btn btn-outline-secondary btn-block btn-secondary size", data: {confirm: "Are you certain you want to delete this?"}%>
+    <td class="text-center">
+      <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-outline-success btn-success btn-lg size" %>
+      <%= link_to "削除する", address_path(address.id), method: :delete, class: "btn btn-outline-danger btn-danger btn-lg size", data: {confirm: "Are you certain you want to delete this?"}%>
     </td>
   </tr>
   <% end %>
 </table>
+</div>
