--- a/app/views/public/bar/_sidebar.html.erb
+++ b/app/views/public/bar/_sidebar.html.erb
@@ -1,8 +1,8 @@
 <div class="col-md-3">
-  <table class="table genre-search">
+  <table class="table table-bordered genre-search">
     <thead>
       <tr>
-        <th>ジャンル検索</th>
+        <td>ジャンル検索</td>
       </tr>
     </thead>
     <tbody>
