--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,26 +1,35 @@
-<h1>注文履歴一覧</h1>
-<table>
-  <tr>
-    <th>注文日</th>
-    <th>配送先配送先</th>
-    <th>注文商品</th>
-    <th>支払金額</th>
-    <th>ステータス</th>
-    <th>注文詳細</th>
-  </tr>
-  <% @orders.each do |order| %>
-  <tr>
-    <td><%= order.created_at.to_s(:datetime_jp_2) %></td>
-    <td><%= order.customer.full_address %></td>
-      <td>
-        <% order.order_details.each do |order_detail| %>
-          <%= order_detail.item.name %></br>
+<div class="container-fulid">
+<h3 class="row justify-content-start position"><span class="thead">注文履歴一覧</span></h3>
+  <div class="row justify-content-center">
+    <div class="col-md-11">
+      <table class="table table-bordered table-sm order-details-index">
+        <tr>
+          <th class="thead">注文日</th>
+          <th class="thead">配送先配送先</th>
+          <th class="thead">注文商品</th>
+          <th class="thead">支払金額</th>
+          <th class="thead">ステータス</th>
+          <th class="thead">注文詳細</th>
+        </tr>
+        <% @orders.each do |order| %>
+        <tr>
+          <th><%= order.created_at.to_s(:datetime_jp_2) %></th>
+          <th>
+            <%= order.delivery_postal_code %></br>
+            <%= order.delivery_address %></br>
+            <%= order.delivery_name %>
+          </th>
+            <th>
+              <% order.order_details.each do |order_detail| %>
+                <%= order_detail.item.name %></br>
+              <% end %>
+            </th>
+          <th><%= order.billing_amount.to_s(:delimited) %>円</th>
+          <th><%= order.order_status_i18n %></th>
+          <th><%= link_to "表示する" , order_path(order.id), class: "btn btn-outline-success btn-block btn-success size" %></th>
+        </tr>
         <% end %>
-      </td>
-    <td><%= order.billing_amount %>円</td>
-    <td><%= order.order_status_i18n %></td>
-    <td><%= link_to "表示する" , order_path(order.id) %></td>
-    <td></td>
-  </tr>
-  <% end %>
-</table>
+      </table>
+    </div>
+  </div>
+</div>
