--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,62 +1,68 @@
-<h1>注文履歴詳細</h1>
-<table>
-  <tr>注文情報</tr>
-  <tr>
-    <td>注文日</td>
-    <td><%= @order.created_at.to_s(:datetime_jp_2) %></td>
-  </tr>
-  <tr>
-    <td>配送先</td>
-    <td><%= @order.customer.full_address %></td>
-  </tr>
-  <tr>
-    <td>支払方法</td>
-    <td><%= @order.payment_method_i18n %></td>
-  </tr>
-  <tr>
-    <td>ステータス</td>
-    <td><%= @order.order_status_i18n %></td>
-  </tr>
-</table>
-
-<table>
-  <tr>注文内容</tr>
-  <thead>
-    <tr>
-      <th>商品</th>
-      <th>単価（税込）</th>
-      <th>個数</th>
-      <th>小計</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% sum=0 %>
-    <% @order_details.each do |order_detail| %>
-    <tr>
-      <% subtotal=(order_detail.item.tax_price)*order_detail.amount %>
-      <td><%= order_detail.item.name %></td>
-      <td><%= order_detail.item.tax_price %></td>
-      <td><%= order_detail.amount %></td>
-      <td><%= subtotal %></td>
-      <% sum+=subtotal %>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<table>
-  <tr>請求情報</tr>
-  <tr>
-    <td>商品合計</td>
-    <td><%= sum %></td>
-  </tr>
-  <tr>
-    <td>配送料</td>
-    <td><%= @order.sipping_fee %></td>
-  </tr>
-  <tr>
-    <td>ご請求額</td>
-    <td><%= sum+@order.sipping_fee %></td>
-  </tr>
-</table>
+<div class="container">
+  <h3 class="row justify-content-start position"><span class="thead">注文履歴詳細</span></h3>
+  <div class="row justify-content-start">
+    <div class="col-md-7">
+      <table class="table table-bordered">
+        <tr>注文情報</tr>
+        <tr>
+          <td class="thead">注文日</td>
+          <td><%= @order.created_at.to_s(:datetime_jp_2) %></td>
+        </tr>
+        <tr>
+          <td class="thead">配送先</td>
+          <td><%= @order.customer.full_address %></td>
+        </tr>
+        <tr>
+          <td class="thead">支払方法</td>
+          <td><%= @order.payment_method_i18n %></td>
+        </tr>
+        <tr>
+          <td class="thead">ステータス</td>
+          <td><%= @order.order_status_i18n %></td>
+        </tr>
+      </table>
+      <table class="table table-bordered order-content-table">
+        <tr>注文内容</tr>
+        <thead>
+          <tr>
+            <th class="thead">商品</th>
+            <th class="thead">単価（税込）</th>
+            <th class="thead">個数</th>
+            <th class="thead">小計</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% sum=0 %>
+          <% @order_details.each do |order_detail| %>
+          <tr>
+            <% subtotal=(order_detail.item.tax_price)*order_detail.amount %>
+            <td><%= order_detail.item.name %></td>
+            <td><%= order_detail.item.tax_price.to_s(:delimited) %></td>
+            <td><%= order_detail.amount %></td>
+            <td><%= subtotal.to_s(:delimited) %></td>
+            <% sum+=subtotal %>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-4">
+      <table class="table table-bordered">
+        <tr>請求情報</tr>
+        <tr>
+          <td class="thead">商品合計</td>
+          <td><%= sum.to_s(:delimited) %></td>
+        </tr>
+        <tr>
+          <td class="thead">配送料</td>
+          <td><%= @order.sipping_fee.to_s(:delimited) %></td>
+        </tr>
+        <tr>
+          <td class="thead">ご請求額</td>
+          <td><%= (sum+@order.sipping_fee).to_s(:delimited) %></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
 
