--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,36 +24,36 @@
               <%= link_to "マイページ", customers_path, class: 'fas fa-home nav-link text-light' %>
             </li>
             <li class="nav-item">
-              <%= link_to "商品一覧", items_path, class: 'fas fa-users nav-link text-light' %>
+              <%= link_to "商品一覧", items_path, class: 'fas fa-birthday-cake nav-link text-light' %>
             </li>
             <li class="nav-item">
-              <%= link_to "カート", cart_items_path, class: 'fas fa-book-open nav-link text-light' %>
+              <%= link_to "カート", cart_items_path, class: 'fas fa-cart-plus nav-link text-light' %>
             </li>
             <li class="nav-item">
               <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-light' %>
             </li>
           <% elsif admin_signed_in? %>
             <li class="nav-item">
-              <%= link_to "商品一覧", admin_items_path, class: 'fas fa-users nav-link text-light' %>
+              <%= link_to "商品一覧", admin_items_path, class: 'fas fa-birthday-cake nav-link text-light' %>
             </li>
             <li class="nav-item">
-              <%= link_to "会員一覧", admin_customers_path, class: 'fas fa-book-open nav-link text-light' %>
+              <%= link_to "会員一覧", admin_customers_path, class: 'fas fa-users nav-link text-light' %>
             </li>
             <li class="nav-item">
-              <%= link_to "注文履歴一覧", admin_root_path, class: 'fas fa-book-open nav-link text-light' %>
+              <%= link_to "注文履歴一覧", admin_root_path, class: 'fas fa-bags-shopping nav-link text-light' %>
             </li>
             <li class="nav-item">
-              <%= link_to "ジャンル一覧", admin_genres_path, class: 'fas fa-book-open nav-link text-light' %>
+              <%= link_to "ジャンル一覧", admin_genres_path, class: 'fas fa-clipboard-list nav-link text-light' %>
             </li>
             <li class="nav-item">
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-light' %>
             </li>
           <% else %>
             <li class="nav-item">
-              <%= link_to "About", about_path, class: 'fas fa-home nav-link text-light' %>
+              <%= link_to "About", about_path, class: 'fas fa-plus nav-link text-light' %>
             </li>
             <li class="nav-item">
-              <%= link_to "商品一覧", items_path, class: 'fas fa-link nav-link text-light' %>
+              <%= link_to "商品一覧", items_path, class: 'fas fa-birthday-cake nav-link text-light' %>
             </li>
             <li class="nav-item">
               <%= link_to "新規登録", new_customer_registration_path, class: 'fas fa-user-plus nav-link text-light' %>
