--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,4 +1,14 @@
 <div class="container">
+  <div class="error_message">
+    <% if @address.errors.any? %>
+      <h2><%= @address.errors.count %>errors prohibited this obj from being saved:</h2>
+      <ul>
+      <% @address.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      </ul>
+      <% end %>
+    <% end %>
+  </div>
   <h3 class="row justify-content-start position"><span class="thead">配送先登録/一覧</span></h3>
   <div class="row justify-content-start">
     <div class="col-md-12">
