--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -19,7 +19,7 @@
     <div class="col-md-3">
       <div class="unsubscribe">
         <p><%= link_to "退会しない",customers_path, class: "btn btn-outline-primary btn-block btn-primary size" %></p>
-        <p><%= link_to "退会する", withdraw_customers_path, method: :patch, class: "btn btn-outline-danger btn-block btn-danger size" %></p>
+        <p><%= link_to "退会する", withdraw_customers_path, method: :patch, class: "btn btn-outline-danger btn-block btn-danger size", data: { confirm: "本当に退会しますか？" } %></p>
       </div>
     </div>
   </div>
