--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,9 @@
 <div class="container-fluid">
+  <% if flash[:notice] %>
+    <div class="flash-withdraw">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
  <div class="row">
     <div class="text-left">
       <%= render "public/bar/sidebar", genres: @genres %><br>
