--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -14,7 +14,9 @@
         <% @items.each do |item| %>
         <div class="items-each">
           <p>
-            <%= attachment_image_tag item, :image, :fill, 200, 140, fallback: "no_image.jpg" %>
+            <%= link_to item_path(item.id) do %>
+              <%= attachment_image_tag item, :image, :fill, 200, 140, fallback: "no_image.jpg" %>
+            <% end %>
           </p>
           <p><%= link_to item.name, item_path(item.id) %></p>
           <p>￥<%= item.price.to_s(:delimited) %></p>
