--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
+  <% if flash[:notice] %>
+    <div class="flash">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
   <h4 class="row justify-content-start position"><span class="thead">注文情報入力</span></h4>
   <div class="row justify-content-start">
     <div class="col-md-5">
